# Pytorch-DDP

./: Multi_node_traning.py  Single_node_training.py  dataset.json  dataset.py  model.py  pyproject.toml  setup.py
